// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductOverview component renders correctly with Recaptcha 1`] = `
<div>
  <div
    class="ProductOverview"
  >
    <div
      class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-8"
      >
        <div
          class="MediaGallery"
        >
          <div
            class="image-wrapper"
          >
            <img
              class="main-image-wrapper main-image-wrapper--short Media Media--contain"
              src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
            />
            <div
              class="caption"
            >
              <p
                class="MuiTypography-root caption-text Typography MuiTypography-h6"
              >
                <span
                  class="LinesEllipsis  Truncate"
                >
                  This is image caption
                  <wbr />
                </span>
              </p>
            </div>
          </div>
          <div
            class="thumbnails"
          >
            <button
              aria-label="Scroll left"
              class="MuiButtonBase-root thumb-scroller thumb-scroller--left ThumbScrollerButton ThumbScrollerButton--left"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              aria-label="Scroll right"
              class="MuiButtonBase-root thumb-scroller thumb-scroller--right thumb-scroller--hidden ThumbScrollerButton ThumbScrollerButton--right"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              class="scroller"
              style="margin-right: 0%;"
            >
              <button
                aria-label="test alt text"
                class="MuiButtonBase-root thumbnail Thumbnail Thumbnail--selected Thumbnail--large"
                data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"undefined\\",\\"action\\":\\"https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg\\"}"
                tabindex="0"
                type="button"
              >
                <img
                  class="Media"
                  src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
                />
              </button>
              <button
                aria-label="test alt text 1"
                class="MuiButtonBase-root thumbnail Thumbnail Thumbnail--large"
                data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"undefined\\",\\"action\\":\\"https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg\\"}"
                tabindex="0"
                type="button"
              >
                <img
                  class="Media"
                  src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
                />
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                class="MuiButtonBase-root thumbnail Thumbnail Thumbnail--large"
                data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"test video\\",\\"action\\":\\"[object Object]\\"}"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root play-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 5v14l11-7z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
      >
        <div
          class="ProductOverview"
        >
          <h1
            class="MuiTypography-root heading Typography MuiTypography-h3"
          >
            name
          </h1>
          <ul
            class="attributes"
          />
          <div>
            block
          </div>
          <p>
            text
          </p>
        </div>
        <p
          class="MuiTypography-root keyAssetTypesDownload Typography MuiTypography-body1"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductOverview component renders correctly without Recaptcha 1`] = `
<div>
  <div
    class="ProductOverview"
  >
    <div
      class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-8"
      >
        <div
          class="MediaGallery"
        >
          <div
            class="image-wrapper"
          >
            <img
              class="main-image-wrapper main-image-wrapper--short Media Media--contain"
              src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
            />
            <div
              class="caption"
            >
              <p
                class="MuiTypography-root caption-text Typography MuiTypography-h6"
              >
                <span
                  class="LinesEllipsis  Truncate"
                >
                  This is image caption
                  <wbr />
                </span>
              </p>
            </div>
          </div>
          <div
            class="thumbnails"
          >
            <button
              aria-label="Scroll left"
              class="MuiButtonBase-root thumb-scroller thumb-scroller--left ThumbScrollerButton ThumbScrollerButton--left"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              aria-label="Scroll right"
              class="MuiButtonBase-root thumb-scroller thumb-scroller--right thumb-scroller--hidden ThumbScrollerButton ThumbScrollerButton--right"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root icon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              class="scroller"
              style="margin-right: 0%;"
            >
              <button
                aria-label="test alt text"
                class="MuiButtonBase-root thumbnail Thumbnail Thumbnail--selected Thumbnail--large"
                data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"undefined\\",\\"action\\":\\"https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg\\"}"
                tabindex="0"
                type="button"
              >
                <img
                  class="Media"
                  src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
                />
              </button>
              <button
                aria-label="test alt text 1"
                class="MuiButtonBase-root thumbnail Thumbnail Thumbnail--large"
                data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"undefined\\",\\"action\\":\\"https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg\\"}"
                tabindex="0"
                type="button"
              >
                <img
                  class="Media"
                  src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
                />
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                class="MuiButtonBase-root thumbnail Thumbnail Thumbnail--large"
                data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"test video\\",\\"action\\":\\"[object Object]\\"}"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root play-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 5v14l11-7z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
      >
        <div
          class="ProductOverview"
        >
          <h1
            class="MuiTypography-root heading Typography MuiTypography-h3"
          >
            name
          </h1>
          <ul
            class="attributes"
          />
          <div>
            block
          </div>
          <p>
            text
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductOverview component renders with default image if there are no images, videos nor visualiser media 1`] = `
<div>
  <div
    class="ProductOverview"
  >
    <div
      class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-8"
      >
        <div
          class="MediaGallery"
        >
          <div
            class="image-wrapper"
          >
            <svg
              class="main-image-wrapper main-image-wrapper--short Media Media--contain"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
      >
        <div
          class="ProductOverview"
        >
          <h1
            class="MuiTypography-root heading Typography MuiTypography-h3"
          >
            name
          </h1>
          <ul
            class="attributes"
          />
          <div>
            block
          </div>
          <p>
            text
          </p>
        </div>
        <p
          class="MuiTypography-root keyAssetTypesDownload Typography MuiTypography-body1"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;
